# NRFGame

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  basegame.cpp  basegame.hpp  common.hpp  context.hpp  game.cpp  game.hpp  gameobject.hpp  main.cpp  sprite.cpp
src/engine/: CMakeLists.txt  basegame.cpp  basegame.hpp  gameobject.hpp  sprite.cpp  sprite.hpp
src/engine/interfaces/: drawable.hpp  updatable.hpp  update.hpp
